derive/ui_test/fail/get_enum.rs
use utils_lib_derive::Getter;

#[derive(Getter)]
enum E {
    #[get]
    Variant,
}

fn main() {}
