derive/ui_test/fail/get_enum.stderr
error: It is not possible to derive getter for enums yet.
 --> ui_test/fail/get_enum.rs:3:10
  |
3 | #[derive(Getter)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Getter` (in Nightly builds, run with -Z macro-backtrace for more info)
